RC1-004: Fixed styles for when no blocks are visible.

--- a/less/moodle.less
+++ b/less/moodle.less
@@ -359,11 +359,17 @@ h6 {font-size: 100%;}
 }
 /* Default Three Columns - All
 ------------------------------*/
-
-.content-only {
-    #region-main-box,
-    #region-main {
-        width: 100%;
+.has-region-side-pre {
+    &.empty-region-side-pre {
+        &.has-region-side-post {
+            &.empty-region-side-post,
+            .content-only {
+                #region-main-box,
+                #region-main {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
 .empty-region-side-pre {
